dark mode fixes

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -1,8 +1,17 @@
 // stylelint-disable declaration-no-important
 
 @mixin dark-mode {
-  color: #afbdd1;
-  background: $dark;
+
+  &,
+  .modal-content,
+  .dropdown-menu {
+    background: $dark;
+    color: #afbdd1;
+  }
+
+  .dropdown-menu-arrow::after {
+    border-bottom-color: $dark;
+  }
 
   .card,
   .header,
@@ -10,7 +19,6 @@
   .sidenav,
   .topnav,
   .navbar,
-  .dropdown-menu,
   .form-control,
   .selectgroup-button {
     background: rgba(0, 0, 0, .1);
