--- a/scss/ui/_dropdowns.scss
+++ b/scss/ui/_dropdowns.scss
@@ -1,3 +1,7 @@
+.dropdown-divider {
+  border-color: $border-color;
+}
+
 .dropdown-menu-scrollable {
   height: auto;
   max-height: 12rem;
@@ -7,6 +11,10 @@
 .dropdown-menu {
   min-width: 12rem;
   box-shadow: $box-shadow;
+}
+
+.dropdown-item {
+  color: inherit;
 }
 
 .dropdown-menu-arrow {
